[package]
name = "velvet_noise"
version = "0.1.0"
authors = ["Richard Mitic <richard.h.mitic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version="0.7", features=["small_rng"] }

[dev-dependencies]
hound = "3.4.0"
more-asserts = "0.2.1"

[[bin]]
name = "main"
path = "src/main.rs"