[package]
name = "velvet_noise"
version = "0.1.0"
authors = ["Richard Mitic <richard.h.mitic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version="0.7", features=["small_rng"] }
hound = "3.4.0"
dasp_sample = "0.11.0"
dasp_frame = "0.11.0"
dasp_signal = "0.11.0"
dasp_ring_buffer = "0.11.0"

[dev-dependencies]
more-asserts = "0.2.1"

[lib]
name = "velvet_noise"
path = "src/lib.rs"

[[bin]]
name = "endless"
path = "src/main.rs"